fixed collapsed parent. Still trouble with margins

--- a/css/layout.css
+++ b/css/layout.css
@@ -24,6 +24,9 @@
 
 /* Posititoning Classes */
 
+.deals {
+  margin-top: 2%;
+}
 
 .col-1 {
   float: left;
